[package]
name = "xpather"
version = "0.1.4"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/rust-xpath"
respository = "https://github.com/Its-its/rust-xpath"
readme = "README.md"
keywords = ["xpath"]

[dependencies]
regex = "1.4"

html5ever = "0.25"
markup5ever = "0.10"
markup5ever_rcdom  = "0.1"