[package]
name = "xpather"
version = "0.3.0-beta.5"
authors = ["Timothy <programming@its.rip>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/rust-xpath"
respository = "https://github.com/Its-its/rust-xpath"
readme = "README.md"
keywords = ["xpath"]
description = "A remake of sxd-xpath to teach myself more about parsing from scratch. Uses Regex, html5ever, and markup5ever"

[dependencies]
regex = "1.4"

html5ever = "0.25"
markup5ever = "0.10"
markup5ever_rcdom  = "0.1"

thiserror = "1.0"