[package]
name = "xpather"
version = "0.3.0-beta.9"
authors = ["Timothy <programming@its.rip>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Its-its/rust-xpath"
respository = "https://github.com/Its-its/rust-xpath"
readme = "README.md"
keywords = ["xpath"]
description = "A remake of sxd-xpath to teach myself more about parsing from scratch. Uses Regex, html5ever, and markup5ever"

[dev-dependencies]
tracing-subscriber = "0.3"

[dependencies]
regex = "1.4"

html5ever = "0.26"
markup5ever = "0.11"
markup5ever_rcdom  = "0.2"

thiserror = "1.0"

tracing = "0.1"

[[example]]
name = "test"